# Nebula-Mesh

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  design_document.md  pyproject.toml  setup_input_client.sh  setup_main_pc.sh  setup_mobile_client.sh  setup_rpi3_dashboard.sh  setup_vps.sh
docs/: README.md  input_client.md  main_pc.md  mobile_client.md  rpi3_dashboard.md  vps.md
input_client/: __main__.py  config.py  server.py
input_client/tests/: test_routing_smoke.py
main_pc/: __init__.py  __main__.py  app.py  migrate_processed_chroma.py  strategy.py  sync_daemon.py  vector_memory.py
main_pc/tests/: test_http_polling_sync_manager_smoke.py  test_main_pc_autosync_wiring_smoke.py  test_main_pc_ingest_smoke.py  test_strategy_smoke.py  test_sync_daemon_flow_smoke.py  test_sync_daemon_smoke.py  test_vector_memory_smoke.py  test_vps_vector_upsert_api_smoke.py
mobile_client/: __init__.py  __main__.py  config.py  server.py
mobile_client/tests/: test_mobile_routing_smoke.py
nebula_mesh/: __init__.py  contracts.py
rpi3_dashboard/: __init__.py  __main__.py  dashboard.py
rpi3_dashboard/tests/: test_dashboard_smoke.py
tests/: test_contracts_smoke.py  test_full_flow_integration.py  test_input_to_vps_and_pc_integration_smoke.py  test_main_pc_app_smoke.py  test_mobile_to_vps_and_pc_integration_smoke.py
vps/: __init__.py  __main__.py  api.py  api_client.py  config.py  pending_queue.py  pii_firewall.py  vector_memory.py
vps/tests/: test_api_smoke.py  test_pending_queue_smoke.py  test_pii_firewall_smoke.py
