[project]
name = "nebula-mesh"
version = "0.1.0"
description = "Personal Intelligence Mesh (Nebula Mesh)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "flask>=3.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "requests>=2.31",
  "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]